--- a/index.html
+++ b/index.html
@@ -1,27 +1,30 @@
 <html>
-<div>
-<head>
+  <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
-    <h1>
-        Welcome to my cool website
+    <script src="script.js"></script>
+    <title>
+      Website
+    </title>
+  </head>
+  <body>
+    <h1 id="title">
+      Destino's Website
     </h1>
-</head>
-<body>
-    <hr>
-    <p>
-        test paragraph where I yap for the next few minutes displaying my true insane powerful undefined skill for no reason idk what im saying no more; You suck.
-    </p>
-    <h1>
-        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
-            click this super secret link
-        </a>
-        <br>
-    </h1>
-    <iframe src="https://scratch.mit.edu/projects/934664557/embed" frameborder="0" width="700" height="600">
-    </iframe>
-</body>
-</div>
+    <div id="container">
+    <div id="loginbox">
+      <div id="loginlabel">
+        <h2>
+          Please Login
+        </h2>
+      </div>
+      <input id="entry1" placeholder="Username"></input>
+      <br>
+      <input id="entry2" placeholder="Password"></input>
+      <br>
+      <br>
+      <button id="loginbutton" onclick="Login()">Login</button>
+    </div>
+  </body>
 </html>
